kubernetes-manifests/boardgame-manifests/boardgame_deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: boardgame-deployment
spec:
  selector:
    matchLabels:
      app: boardgame
  replicas: 3 
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
        - name: boardgame
          image: odennav/boardgame:v1 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
