kubernetes-manifests/boardgame-manifests/boardgame_service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: boardgame-svc
spec:
  selector:
    app: boardgame
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080 
  type: LoadBalancer
