kubernetes-manifests/boardgame-manifests/boardgame_ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: boardgame-ingress
  namespace: boardgame
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.boardgame.odennav.com`)
      kind: Rule
      services:
        - name: boardgame-svc
          port: 80
    - match: Host(`boardgame.odennav.com`)
      kind: Rule
      services:
        - name: boardgame-svc
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-odennav-com-tls
